# CMakeList.txt : CMake project for DnDVirtualReality, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (DnDVirtualReality "DnDVirtualReality.cpp" "DnDVirtualReality.h" "Menu.cpp")

# TODO: Add tests and install targets if needed.
